# dense_mapping

./: CMakeLists.txt  README.md  auto_test.sh  compare.cc  package.xml  record_data.cc  ros_mono.cc  ros_stereo.cc  ros_stereo_euroc.cc  ros_stereo_hkust.cc  ros_stereo_kitti.cc  ros_stereo_live.cc  ros_stereo_newCollege.cc  statics.cc
config/: EuRoC_stereo_viconRoom.yaml  EuRoC_stereo_viconRoom.yaml~  Euroc.yaml~  KITTI00.yaml~  KITTI01.yaml  KITTI01.yaml~  KITTI02.yaml  KITTI02.yaml~  KITTI03.yaml  KITTI03.yaml~  KITTI04.yaml  KITTI04.yaml~  KITTI05.yaml  KITTI06.yaml  KITTI06.yaml~  KITTI07.yaml~  KITTI08.yaml  KITTI08.yaml~  KITTI09.yaml  KITTI09.yaml~  KITTI10.yaml  KITTI11.yaml  KITTI12.yaml  KITTI13.yaml  KITTI14.yaml  KITTI15.yaml  KITTI16.yaml  KITTI17.yaml  KITTI18.yaml  KITTI19.yaml  KITTI20.yaml  KITTI21.yaml  myVI.yaml  myVI.yaml~  stereo_NewCollege.yaml
launch/: Euroc_stereo_euroc.launch~  Euroc_stereo_live _VI.launch~  Euroc_stereo_live.launch  Euroc_stereo_live.launch~  Euroc_stereo_offline.launch~  Euroc_stereo_offline_viconRoom.launch~
src/: FColorMap.cc  KeyFrame.cc  KeyFrame.h  KeyFrameDatabase.cc  KeyFrameDatabase.h  LocalMapping.cc  LocalMapping.h  LocalMeshing.cc  LocalMeshing.h  Map.cc  Map.h  MapDrawer.cc  MapDrawer.h  MapPoint.cc  MapPoint.h  ORBextractor.cc  ORBextractor.h  Settings.cpp  Settings.h  System.cc  System.h  Tracking.cc  Tracking.h  Viewer.cc  Viewer.h  ramRead.h  util.h
src/ceres_factor/: ceres_util.h  pnp_factor.cpp  pnp_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  relative_pose_factor.cpp  relative_pose_factor.h
src/libelas_omp/: elas.cpp
src/open_chisel/: Chisel.cpp  Chisel.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ColorVoxel.cpp  DistVoxel.cpp  DistVoxel.h  ProjectionIntegrator.cpp  ProjectionIntegrator.h
src/open_chisel/camera/: DepthImage.h  Intrinsics.cpp  PinholeCamera.cpp
src/open_chisel/geometry/: AABB.cpp  AABB.cpp~  AABB.h  Frustum.cpp  Geometry.h  Plane.cpp  Raycast.cpp
src/open_chisel/io/: PLY.cpp
src/open_chisel/marching_cubes/: MarchingCubes.cpp  MarchingCubes.h
src/open_chisel/mesh/: Mesh.h
src/open_chisel/pointcloud/: PointCloud.cpp
src/open_chisel/threading/: Threading.h
src/open_chisel/truncation/: InverseTruncator.h
src/sgm/: CMakeLists.txt~  stereo_sgm.cpp
src/sgm2/: configuration.h  disparity_method.cu  disparity_method.h  util.h
